chore: nicer bg gfx

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -294,7 +294,7 @@
   "recipient_id": "Идентификатор на получателя",
   "recipient_no_public_key": "Акаунтът на получателя няма публичен ключ, което означава, че никога не е имал изходяща транзакция. Сметката има салдо от __burst__ Signa. Моля, проверете отново адреса на получателя си, преди да изпратите.",
   "recipients": "Получатели",
-  "record": "Запис",
+  "record": "Данни за акаунта",
   "referenced_transaction_full_hash": "Пълен хеш на препратената транзакция",
   "refund": "Възстановяване",
   "refunded": "Възстановено",
