--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -294,7 +294,7 @@
   "recipient_id": "Αναγνωριστικό παραλήπτη",
   "recipient_no_public_key": "Ο λογαριασμός παραλήπτη δεν έχει δημόσιο κλειδί, που σημαίνει ότι δεν είχε ποτέ εξερχόμενη συναλλαγή Ο λογαριασμός έχει υπόλοιπο __burst__ Signa. Ελέγξτε ξανά τη διεύθυνση παραλήπτη πριν την υποβολή.",
   "recipients": "Παραλήπτες",
-  "record": "Ρεκόρ",
+  "record": "Δεδομένα λογαριασμού",
   "referenced_transaction_full_hash": "Αναφερόμενη συναλλαγή Full Hash",
   "refund": "Επιστροφή χρημάτων",
   "refunded": "Επιστροφή χρημάτων",
