--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -294,7 +294,7 @@
   "recipient_id": "प्राप्तकर्ता आईडी",
   "recipient_no_public_key": "प्राप्तकर्ता खाते में सार्वजनिक कुंजी नहीं होती है, जिसका अर्थ है कि इसका कभी भी आउटगोइंग लेनदेन नहीं हुआ है। खाते में __burst__ सिग्ना की शेष राशि है। सबमिट करने से पहले कृपया अपने प्राप्तकर्ता के पते की दोबारा जांच करें।",
   "recipients": "प्राप्तकर्ताओं",
-  "record": "अभिलेख",
+  "record": "खाता डेटा",
   "referenced_transaction_full_hash": "संदर्भित लेनदेन पूर्ण हैश",
   "refund": "धन की वापसी",
   "refunded": "वापसी की गई है",
