--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -294,7 +294,7 @@
   "recipient_id": "ИД примаоца",
   "recipient_no_public_key": "Налог примаоца нема јавни кључ, што значи да никада није имао одлазну трансакцију. Стање на рачуну је __ бурст__ Сигна. Пре слања, поново проверите адресу примаоца.",
   "recipients": "Примаоци",
-  "record": "Запис",
+  "record": "Подаци о рачуну",
   "referenced_transaction_full_hash": "Референтна трансакција Фулл Хасх",
   "refund": "Враћање новца",
   "refunded": "Рефундед",
