--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -294,7 +294,7 @@
   "recipient_id": "Ідентифікатор одержувача",
   "recipient_no_public_key": "Обліковий запис одержувача не має відкритого ключа, тобто він ніколи не мав вихідної транзакції. Залишок на рахунку __burst__ Signa. Будь ласка, перевірте адресу одержувача перед надсиланням.",
   "recipients": "Одержувачі",
-  "record": "Запис",
+  "record": "Дані облікового запису",
   "referenced_transaction_full_hash": "Повний хеш згаданої транзакції",
   "refund": "Відшкодування",
   "refunded": "Повернено",
