--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -294,7 +294,7 @@
   "recipient_id": "ID получателя",
   "recipient_no_public_key": "Счет получателя не имеет публичного ключа, то есть по нему никогда не проводились исходящие транзакции. На счету имеется баланс в размере __burst__ Signa. Пожалуйста, дважды проверьте адрес получателя перед отправкой.",
   "recipients": "Получатели",
-  "record": "Сохранение",
+  "record": "Данные учетной записи",
   "referenced_transaction_full_hash": "Полный хэш указанной транзакции",
   "refund": "Возврат",
   "refunded": "Возвращено",
