feat: added whitespace visualizer

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -434,5 +434,6 @@
   "salt_hint": "За да се повиши сигурността на вашата парола, вашият собствен отделен текстов елемент (сол) се добавя към произволно генерирания списък с думи. Това трябва да бъде прост кратък буквено -цифров израз, например нещо лично или генерирано на случаен принцип.",
   "salt": "Добавете сол",
   "your_new_account": "Вашата регистрирана сметка",
-  "click_to_print": "Щракнете, за да отпечатате"
+  "click_to_print": "Щракнете, за да отпечатате",
+  "show_whitespaces": "Показване на празни пространства"
 }
