--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -434,5 +434,6 @@
   "salt_hint": "Για να αυξήσετε την ασφάλεια της φράσης πρόσβασης, το δικό σας μεμονωμένο στοιχείο κειμένου (αλάτι) προστίθεται στη λίστα λέξεων που τυχαία δημιουργείται. Αυτή θα πρέπει να είναι μια απλή σύντομη αλφαριθμητική έκφραση, π.χ. κάτι προσωπικό ή τυχαία δημιουργημένο.",
   "salt": "Βάλε αλάτι",
   "your_new_account": "Ο λογαριασμός εγγραφής σας",
-  "click_to_print": "Κάντε κλικ για εκτύπωση"
+  "click_to_print": "Κάντε κλικ για εκτύπωση",
+  "show_whitespaces": "Εμφάνιση κενών χώρων"
 }
