--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -434,5 +434,6 @@
   "salt_hint": "Salasanasi turvallisuuden lisäämiseksi oma yksittäinen tekstielementtisi (suola) lisätään satunnaisesti luotuun sanalistaan. Tämän pitäisi olla yksinkertainen lyhyt aakkosnumeerinen lauseke, esim. Jotain henkilökohtaista tai satunnaisesti luotua.",
   "salt": "Lisää suolaa",
   "your_new_account": "Signum -tilisi",
-  "click_to_print": "Tulosta napsauttamalla"
+  "click_to_print": "Tulosta napsauttamalla",
+  "show_whitespaces": "Näytä välilyönnit"
 }
