--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -434,5 +434,6 @@
   "salt_hint": "Да бисте повећали сигурност своје приступне фразе, ваш појединачни текстуални елемент (сол) додаје се на случајно генерисану листу речи. Ово би требало да буде једноставан кратак алфанумерички израз, на пример нешто лично или насумично генерисано.",
   "salt": "Додајте со",
   "your_new_account": "Ваш пријављени налог",
-  "click_to_print": "Кликните да бисте одштампали"
+  "click_to_print": "Кликните да бисте одштампали",
+  "show_whitespaces": "Прикажи размаке"
 }
