--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -434,5 +434,6 @@
   "salt_hint": "Для того, щоб підвищити безпеку вашої парольної фрази, ваш власний окремий текстовий елемент (сіль) додається до випадково створеного списку слів. Це має бути простий короткий буквено -цифровий вираз, наприклад, щось особисте або випадково створене.",
   "salt": "Додати сіль",
   "your_new_account": "Ваш обліковий запис для реєстрації",
-  "click_to_print": "Натисніть, щоб надрукувати"
+  "click_to_print": "Натисніть, щоб надрукувати",
+  "show_whitespaces": "Показати пробіли"
 }
