--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -434,5 +434,6 @@
   "salt_hint": "Per tal d’augmentar la seguretat de la vostra contrasenya, s’afegeix el vostre propi element de text individual (sal) a la llista de paraules generada aleatòriament. Aquesta hauria de ser una simple expressió alfanumèrica breu, per exemple, quelcom personal o generat aleatòriament.",
   "salt": "Afegiu sal",
   "your_new_account": "El vostre compte Signum",
-  "click_to_print": "Feu clic per imprimir"
+  "click_to_print": "Feu clic per imprimir",
+  "show_whitespaces": "Mostra espais en blanc"
 }
