--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -434,5 +434,6 @@
   "salt_hint": "Aby se zvýšila bezpečnost vaší přístupové fráze, bude do seznamu náhodně generovaných slov přidán váš vlastní textový prvek (sůl). Měl by to být jednoduchý krátký alfanumerický výraz, například něco osobního nebo náhodně generovaného.",
   "salt": "Přidat sůl",
   "your_new_account": "Váš účet Signum",
-  "click_to_print": "Klepnutím vytisknete"
+  "click_to_print": "Klepnutím vytisknete",
+  "show_whitespaces": "Zobrazit mezery"
 }
