--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -434,5 +434,6 @@
   "salt_hint": "Um die Sicherheit deiner Passphrase zu erhöhen wird der zufällig generierten Wortliste Dein eigenes individuelles Textelement (Salz) hinzugefügt. Dies sollte ein einfacher kurzer alphanumerischer Ausdruck, z.B. etwas persönliches oder auch zufällig erzeugtes, sein.",
   "salt": "Salz hinzufügen",
   "your_new_account": "Dein Signum-Konto",
-  "click_to_print": "Zum Drucken klicken"
+  "click_to_print": "Zum Drucken klicken",
+  "show_whitespaces": "Leerzeichen anzeigen"
 }
