--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -434,5 +434,6 @@
   "salt_hint": "Para aumentar a seguridade da súa frase de acceso, engádese o seu propio elemento de texto individual (sal) á lista de palabras xerada aleatoriamente. Esta debería ser unha simple expresión alfanumérica curta, por exemplo, algo persoal ou xerado aleatoriamente.",
   "salt": "Engade sal",
   "your_new_account": "A túa conta Signum",
-  "click_to_print": "Fai clic para imprimir"
+  "click_to_print": "Fai clic para imprimir",
+  "show_whitespaces": "Mostrar espazos en branco"
 }
