--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -434,5 +434,6 @@
   "salt_hint": "パスフレーズのセキュリティを強化するために、ランダムに生成された単語リストに独自のテキスト要素（ソルト）が追加されます。これは、単純な短い英数字の表現である必要があります。たとえば、個人的なものやランダムに生成されたものなどです。",
   "salt": "塩を加える",
   "your_new_account": "あなたのSignumアカウント",
-  "click_to_print": "クリックして印刷"
+  "click_to_print": "クリックして印刷",
+  "show_whitespaces": "空白を表示する"
 }
