--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -434,5 +434,6 @@
   "salt_hint": "Siekiant padidinti slaptafrazės saugumą, jūsų atskiras teksto elementas (druska) įtraukiamas į atsitiktinai sugeneruotą žodžių sąrašą. Tai turėtų būti paprasta trumpa raidinė ir skaitinė išraiška, pvz., Kažkas asmeniško ar atsitiktinai sugeneruoto.",
   "salt": "Įpilkite druskos",
   "your_new_account": "Jūsų „Signum“ paskyra",
-  "click_to_print": "Spustelėkite, jei norite spausdinti"
+  "click_to_print": "Spustelėkite, jei norite spausdinti",
+  "show_whitespaces": "Rodyti baltas erdves"
 }
