--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -434,5 +434,6 @@
   "salt_hint": "Чтобы повысить безопасность вашей ключевой фразы, ваш собственный индивидуальный текстовый элемент (соль) добавляется в случайно сгенерированный список слов. Это должно быть простое короткое буквенно-цифровое выражение, например, что-то личное или сгенерированное случайным образом.",
   "salt": "Добавить соль",
   "your_new_account": "Ваша учетная запись Signum",
-  "click_to_print": "Нажмите, чтобы распечатать"
+  "click_to_print": "Нажмите, чтобы распечатать",
+  "show_whitespaces": "Показать пробелы"
 }
